# wikiquotes-ai-tagger

./: .gitignore  README.md  categories.txt  config.toml  pyproject.toml  scoring_prompt.toml
src/wikiquotes_tagger/: __init__.py  cli.py  config.py  db.py  downloader.py  exporter.py  parser.py  scorer.py  tagger.py
tests/: test_parser.py  test_scorer.py  test_tagger.py
