[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikiquotes-ai-tagger"
version = "0.1.0"
description = "Download Wikiquote dumps, parse quotes, and AI-tag with keywords and categories"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "mwparserfromhell>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
wikiquotes-tagger = "wikiquotes_tagger.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/wikiquotes_tagger"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
